Fixed facet spacing via inline img tag style"

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -616,6 +616,7 @@ div.facet-tn-section{
 li.facet-item {
 	
 	height: 30px;
+	max-height: 30px;
 	padding-bottom: 0px;
 }
 
